@@ -29,7 +29,10 @@ class ATReferenceCriterion(ATSelectionCriterion):
         options = catalog.uniqueValuesFor(self.Field())
 
         brains = uid_cat(UID=options, sort_on='Title')
-        display = [((putils.pretty_title_or_id(b)).lower(), b.UID, b.Title or b.id) for b in brains]
+        display = []
+        for b in brains:
+            title_or_id = b.Title or b.id
+            display.append(title_or_id.lower(), b.UID, title_or_id)
         display.sort()
         display_list = DisplayList([(d[1], d[2]) for d in display])
 
