@@ -17,7 +17,7 @@
                      photo_display python:'large';">
 
       <div class="contentHeader">
-        <h1 tal:content="image/pretty_title_or_id">Title or id</h1>
+        <h1 tal:content="image/Title|image/getId">Title or id</h1>
       </div>
 
       <div metal:use-macro="here/batch_macros/macros/navigation"></div>
