@@ -18,7 +18,7 @@
 
     <div tal:replace="structure provider:plone.abovecontenttitle" />
 
-    <h1 tal:content="context/pretty_title_or_id" class="documentFirstHeading">
+    <h1 tal:content="context/Title|context/getId" class="documentFirstHeading">
         Title or id
     </h1>
 
@@ -48,7 +48,7 @@
                             <span class="photoAlbumEntryWrapper">
                             <img src="" alt="" tal:replace="structure python:image.tag(scale='thumb', title=image.Description())" />
                             </span>
-                    <span class="photoAlbumEntryTitle" tal:content="image/pretty_title_or_id">
+                    <span class="photoAlbumEntryTitle" tal:content="image/Title">
                        Title
                     </span>
                         </a>
@@ -70,7 +70,7 @@
                                      tal:replace="structure python:random_image.tag(scale='thumb', title=album.Description)" />
                             </span>
                             <span class="photoAlbumEntryTitle">
-                               <tal:title content="album/pretty_title_or_id">Title</tal:title>
+                               <tal:title content="album/Title">Title</tal:title>
                             (<tal:number content="number_of_images" />)
                             </span>
                         </a>
