@@ -16,7 +16,7 @@
     <h1 i18n:domain="atcontenttypes"
         i18n:translate="atct_history_changes_of"
         class="documentFirstHeading">
-        Changes of <tal:title tal:content="here/pretty_title_or_id" i18n:name="title" />
+        Changes of <tal:title tal:content="context/Title" i18n:name="title" />
     </h1>
 
     <div class="documentDescription"
