@@ -54,7 +54,7 @@
     <h1 i18n:domain="atcontenttypes"
         i18n:translate="heading_criteria_for">
         Criteria for
-        <span i18n:name="title" tal:content="context/pretty_title_or_id" tal:omit-tag="" />
+        <span i18n:name="title" tal:content="context/Title" tal:omit-tag="" />
     </h1>
 
     <p class="discreet"
